--- a/style/sintefcolor.sty
+++ b/style/sintefcolor.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{sintefcolor}[2021/03/04]
+\ProvidesPackage{sintefcolor}[sintefcolor]
 \RequirePackage{xcolor}
 \definecolor{maincolor}{RGB/cmyk}{23,73,148/95,78,16,0}
 \definecolor{sintefgrey}{RGB/cmyk}{235,235,230/0,0,0,.1}
